--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "version": "1.0.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "gatsby": "^1.8.10",
-    "gatsby-link": "^1.6.5",
-    "gatsby-plugin-catch-links": "^1.0.4",
-    "gatsby-plugin-react-helmet": "^1.0.2",
+    "gatsby": "^1.9.50",
+    "gatsby-link": "^1.6.18",
+    "gatsby-plugin-catch-links": "^1.0.8",
+    "gatsby-plugin-react-helmet": "^1.0.6",
+    "gatsby-remark-images": "^1.5.13",
     "gatsby-remark-prismjs": "^1.2.8",
-    "gatsby-source-filesystem": "^1.4.2",
-    "gatsby-transformer-remark": "^1.7.0"
+    "gatsby-source-filesystem": "^1.5.1",
+    "gatsby-transformer-remark": "^1.7.15"
   },
   "keywords": [
     "gatsby"
@@ -24,6 +25,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^1.5.2"
+    "gatsby-plugin-styled-components": "^1.0.5",
+    "prettier": "^1.7.3"
   }
 }
