--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gatsby-link": "^1.6.18",
     "gatsby-plugin-catch-links": "^1.0.8",
     "gatsby-plugin-react-helmet": "^1.0.6",
+    "gatsby-plugin-typography": "^1.7.10",
     "gatsby-remark-images": "^1.5.13",
     "gatsby-remark-prismjs": "^1.2.8",
     "gatsby-source-filesystem": "^1.5.1",
