--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: node_js
 node_js:
   - "8"
-before_script:
-  - "npm install -g gatsby-cli@1.0.9"
+before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get install -y lftp
+  - npm install -g gatsby-cli@1.0.9
 install:
   - yarn
 script:
