--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby-link": "^1.6.18",
     "gatsby-plugin-catch-links": "^1.0.8",
     "gatsby-plugin-react-helmet": "^1.0.6",
+    "gatsby-plugin-sass": "^1.0.26",
     "gatsby-plugin-sharp": "^1.6.27",
     "gatsby-plugin-typography": "^1.7.10",
     "gatsby-remark-images": "^1.5.13",
@@ -30,7 +31,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "gatsby-plugin-styled-components": "^1.0.5",
     "prettier": "^1.7.3"
   }
 }
